vlib/v/checker/tests/fn_array_decompose_arg_mismatch_err_c.vv
fn main() {
	foo(...args)
}

fn foo() {
}
